Colaboratory를 통해 생성됨

--- a/Codeup_list.ipynb
+++ b/Codeup_list.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM63HuTaXnz/wxJqDSk2EQI",
+      "authorship_tag": "ABX9TyPF/E/IJKOGRffV5zTbLEEq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -416,7 +416,7 @@
         "id": "pOeNvYyvzgs-",
         "outputId": "584e567a-49bd-4f4e-a97e-4d32d518e93b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,6 +455,168 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##인덱스 에러 \n",
+        "\n",
+        "arr=[]\n",
+        "for i in range(10):\n",
+        "  arr.append([])\n",
+        "  for j in range(10):\n",
+        "    arr[i].append(0)\n",
+        "\n",
+        "  for i in range(10):\n",
+        "    #temp=[]\n",
+        "    temp=input().split()\n",
+        "\n",
+        "    for j in range(10):\n",
+        "      arr[i][j] = int(temp[j])\n",
+        "      #arr[i][j]=temp[j]\n",
+        "  \n",
+        "  \n",
+        "  #배열의 값 바꾸기\n",
+        "\n",
+        "  x =1 \n",
+        "  y =1\n",
+        "  arr[x][y]=9\n",
+        "      \n",
+        "  while True:\n",
+        "\n",
+        "    #오른쪽으로 갈 수 있는지\n",
+        "    if arr[x][y+1] == 0:\n",
+        "      arr[x][y+1] =9\n",
+        "      y+=1\n",
+        "      continue\n",
+        "\n",
+        "    #아래쪽으로 갈 수 있는지\n",
+        "    if arr[x+1][y] == 0:\n",
+        "      arr[x+1][y] =9\n",
+        "      x+=1\n",
+        "      continue\n",
+        "\n",
+        "    if arr[x][y+1] ==2:\n",
+        "      arr[x][y+1]=9\n",
+        "      break\n",
+        "    \n",
+        "    if arr[x+1][y] ==2:\n",
+        "      arr[x+1][y]=9\n",
+        "      break \n",
+        "\n",
+        "    if (arr[x][y+1]==1 and [x+1][y]==1) or (x==9 and y==9):\n",
+        "      break\n",
+        "\n",
+        "\n",
+        "for i in range(10):\n",
+        "  for j in range(10):\n",
+        "    print(arr[i][j], end= \" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "RCD8bSVgNyqR",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 279
+        },
+        "outputId": "ff6a9826-3f68-4ea2-d80d-07cc22df0c50"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 1 1 1 1 1 1 1 1 1\n",
+            "1 0 0 1 0 0 0 0 0 1\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-0aafa31f372d>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m       \u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m       \u001b[0;31m#arr[i][j]=temp[j]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m=[]\n",
+        "for i in range(12) :\n",
+        "  m.append([])\n",
+        "  for j in range(12) :\n",
+        "    m[i].append(0)\n",
+        "\n",
+        "for i in range(10) :\n",
+        "  a=input().split()\n",
+        "  for j in range(10) :\n",
+        "    m[i+1][j+1]=int(a[j])\n",
+        "\n",
+        "x = 2\n",
+        "y = 2\n",
+        "while True :\n",
+        "  if m[x][y] == 0 :\n",
+        "    m[x][y] = 9\n",
+        "  elif m[x][y] == 2 :\n",
+        "    m[x][y] = 9\n",
+        "    break\n",
+        "\n",
+        "  if (m[x][y+1]==1 and m[x+1][y]==1) or (x==9 and y==9) :\n",
+        "    break\n",
+        "\n",
+        "  if m[x][y+1] != 1 :\n",
+        "    y += 1\n",
+        "  elif m[x+1][y] != 1 :\n",
+        "    x += 1\n",
+        "    \n",
+        "\n",
+        "for i in range(1, 11) :\n",
+        "  for j in range(1, 11) :\n",
+        "    print(m[i][j], end=' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "18u4AZoMSM5h",
+        "outputId": "b181b363-2fc1-465b-d54b-457bf662973f"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 1 1 1 1 1 1 1 1 1\n",
+            "1 0 0 1 0 0 0 0 0 1\n",
+            "1 0 0 1 1 1 0 0 0 1\n",
+            "1 0 0 0 0 0 0 1 0 1\n",
+            "1 0 0 0 0 0 0 1 0 1\n",
+            "1 0 0 0 0 1 0 1 0 1\n",
+            "1 0 0 0 0 1 2 1 0 1\n",
+            "1 0 0 0 0 1 0 0 0 1\n",
+            "1 0 0 0 0 0 0 0 0 1\n",
+            "1 1 1 1 1 1 1 1 1 1\n",
+            "1 1 1 1 1 1 1 1 1 1 \n",
+            "1 9 9 1 0 0 0 0 0 1 \n",
+            "1 0 9 1 1 1 0 0 0 1 \n",
+            "1 0 9 9 9 9 9 1 0 1 \n",
+            "1 0 0 0 0 0 9 1 0 1 \n",
+            "1 0 0 0 0 1 9 1 0 1 \n",
+            "1 0 0 0 0 1 9 1 0 1 \n",
+            "1 0 0 0 0 1 0 0 0 1 \n",
+            "1 0 0 0 0 0 0 0 0 1 \n",
+            "1 1 1 1 1 1 1 1 1 1 \n"
+          ]
+        }
+      ]
     }
   ]
 }
